--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
     <style>
       .header {
-        display: flex;
+        /* display: flex;
         justify-content: space-between;
-        background-color: orange;
+        background-color: orange; */
       }
       .logo {
         padding: 20px;
